finished privacy policy

--- a/app/views/pages/privacy_policy.html.erb
+++ b/app/views/pages/privacy_policy.html.erb
@@ -13,10 +13,10 @@
     This privacy policy applies to all information collected through our website (such as www.foenixcoding.com), and/or any related services, sales, marketing or events (we refer to them collectively in this privacy policy as the "<span class="bold">Services</span>").  
     <span class="bold">Please read this privacy policy carefully as it will help you make informed decisions about sharing your personal information with us.</span></p>
     <!--  -->
-    <h4 class="bold">Table of Contents</h4>
+    <h4 class="bold mb-4">Table of Contents</h4>
     <p class="responsive-text-small mb-0 underline">1. WHAT INFORMATION DO WE COLLECT?</p>
     <p class="responsive-text-small mb-0 underline">2. HOW DO WE USE YOUR INFORMATION?</p>
-    <p class="responsive-text-small mb-0 underline">3. WILL YOUR INFORMATION BE SHARED WITH ANYONE?</p>
+    <p class="responsive-text-small mb-0 underline"><%= link_to '3. WILL YOUR INFORMATION BE SHARED WITH ANYONE?', 'https://app.termly.io/dashboard/website/325786/privacy-policy#infoshare', target: '_blank' %></p>
     <p class="responsive-text-small mb-0 underline">4. DO WE USE COOKIES AND OTHER TRACKING TECHNOLOGIES?</p>
     <p class="responsive-text-small mb-0 underline">5. HOW LONG DO WE KEEP YOUR INFORMATION?</p>
     <p class="responsive-text-small mb-0 underline">6. DO WE COLLECT INFORMATION FROM MINORS?</p>
@@ -27,7 +27,7 @@
     <p class="responsive-text-small mb-0 underline">11. DO WE MAKE UPDATES TO THIS POLICY?</p>
     <p class="responsive-text-small underline">12. HOW CAN YOU CONTACT US ABOUT THIS POLICY?</p>
     <!-- 1 -->
-    <h4 class="bold">1. WHAT INFORMATION DO WE COLLECT?</h4>
+    <h4 class="bold mb-4">1. WHAT INFORMATION DO WE COLLECT?</h4>
     <p class="responsive-text black">Personal information you disclose to us</p>
     <p class="responsive-text"><span class="bold">In Short:</span> We collect personal information that you provide to us such as name, address, contact information, passwords and security data, and payment information.
     <br><br>
@@ -49,7 +49,7 @@
       <br><br>
       <span class="bold">Online Identifiers.</span> We collect cookie identifiers, or others such as the ones used for analytics and marketing; devices; device's geolocation; and other similar data.</p>
       <!-- 2 -->
-      <h4 class="bold">2. HOW DO WE USE YOUR INFORMATION?</h4>
+      <h4 class="bold mb-4">2. HOW DO WE USE YOUR INFORMATION?</h4>
       <p class="responsive-text"><span class="bold">In Short:</span><span class="italic">We process your information for purposes based on legitimate business interests, the fulfillment of our contract with you, compliance with our legal obligations, and/or your consent.</span>
       <br><br>
       We use personal information collected via our Services for a variety of business purposes described below. We process your personal information for these purposes in reliance on our legitimate business interests, in order to enter into or perform a contract with you, with your consent, and/or for compliance with our legal obligations. We indicate the specific processing grounds we rely on next to each purpose listed below.
@@ -64,7 +64,7 @@
       </ul>
     </p>
     <!-- 3 -->
-    <h4 class="bold">3. WILL YOUR INFORMATION BE SHARED WITH ANYONE?</h4>
+    <h4 class="bold mb-4">3. WILL YOUR INFORMATION BE SHARED WITH ANYONE?</h4>
     <p class="responsive-text"><span class="bold">In Short:</span> <span class="italic">We only share information with your consent, to comply with laws, to provide you with services, to protect your rights, or to fulfill business obligations.</span>
     <br><br>
     We may process or share data based on the following legal basis:
@@ -82,12 +82,12 @@
     </ul>
     </p>
     <!-- 4 -->
-    <h4 class="bold">4. DO WE USE COOKIES AND OTHER TRACKING TECHNOLOGIES?</h4>
+    <h4 class="bold mb-4">4. DO WE USE COOKIES AND OTHER TRACKING TECHNOLOGIES?</h4>
     <p class="responsive-text"><span class="bold">In Short:</span> <span class="italic">We may use cookies and other tracking technologies to collect and store your information.</span>
     <br><br>
     We may use cookies and similar tracking technologies (like web beacons and pixels) to access or store information. Specific information about how we use such technologies and how you can refuse certain cookies is set out in our Cookie Policy.</p>
     <!-- 5 -->
-    <h4 class="bold">5. HOW LONG DO WE KEEP YOUR INFORMATION?</h4>
+    <h4 class="bold mb-4">5. HOW LONG DO WE KEEP YOUR INFORMATION?</h4>
     <p class="responsive-text"><span class="bold">In Short:</span> <span class="italic">We keep your information for as long as necessary to fulfill the purposes outlined in this privacy policy unless otherwise required by law.</span>
     <br><br>
     We will only keep your personal information for as long as it is necessary for the purposes set out in this privacy policy, unless a longer retention period is required or permitted by law (such as tax, accounting or other legal requirements). No purpose in this policy will require us keeping your personal information for longer than the period of time in which users have an account with us.
@@ -95,23 +95,70 @@
     When we have no ongoing legitimate business need to process your personal information, we will either delete or anonymize it, or, if this is not possible (for example, because your personal information has been stored in backup archives), then we will securely store your personal information and isolate it from any further processing until deletion is possible.
     </p>
     <!-- 6 -->
-    <h4 class="bold">DO WE COLLECT INFORMATION FROM MINORS?</h4>
+    <h4 class="bold mb-4">DO WE COLLECT INFORMATION FROM MINORS?</h4>
     <p class="responsive-text"><span class="bold">In Short:</span> <span class="italic">We do not knowingly collect data from or market to children under 18 years of age.</span>
     <br><br>
     We do not knowingly solicit data from or market to children under 18 years of age. By using the Services, you represent that you are at least 18 or that you are the parent or guardian of such a minor and consent to such minor dependent’s use of the Services. If we learn that personal information from users less than 18 years of age has been collected, we will deactivate the account and take reasonable measures to promptly delete such data from our records. If you become aware of any data we have collected from children under age 18, please contact us at sales@foenixcoding.com.</p>
     <!-- 7 -->
-    <h4 class="bold">7. WHAT ARE YOUR PRIVACY RIGHTS?</h4>
+    <h4 class="bold mb-4">7. WHAT ARE YOUR PRIVACY RIGHTS?</h4>
     <p class="responsive-text"><span class="bold">In Short:</span> <span class="italic">In some regions, such as the European Economic Area, you have rights that allow you greater access to and control over your personal information. You may review, change, or terminate your account at any time.</span>
     <br><br>
-    In some regions (like the European Economic Area), you have certain rights under applicable data protection laws. These may include the right (i) to request access and obtain a copy of your personal information, (ii) to request rectification or erasure; (iii) to restrict the processing of your personal information; and (iv) if applicable, to data portability. In certain circumstances, you may also have the right to object to the processing of your personal information. To make such a request, please use the <%= link_to 'contact details', 'http://ec.europa.eu/justice/data-protection/bodies/authorities/index_en.htm', target: '_blank' %> contact details provided below. We will consider and act upon any request in accordance with applicable data protection laws.
+    In some regions (like the European Economic Area), you have certain rights under applicable data protection laws. These may include the right (i) to request access and obtain a copy of your personal information, (ii) to request rectification or erasure; (iii) to restrict the processing of your personal information; and (iv) if applicable, to data portability. In certain circumstances, you may also have the right to object to the processing of your personal information. To make such a request, please use the <%= link_to 'contact details', 'https://app.termly.io/dashboard/website/325786/privacy-policy#contact', target: '_blank' %> contact details provided below. We will consider and act upon any request in accordance with applicable data protection laws.
     <br><br>
     If we are relying on your consent to process your personal information, you have the right to withdraw your consent at any time. Please note however that this will not affect the lawfulness of the processing before its withdrawal.
     <br><br>
     If you are resident in the European Economic Area and you believe we are unlawfully processing your personal information, you also have the right to complain to your local data protection supervisory authority. You can find their contact details here: <%= link_to 'http://ec.europa.eu/justice/data-protection/bodies/authorities/index_en.htm.', 'http://ec.europa.eu/justice/data-protection/bodies/authorities/index_en.htm.', target: '_blank' %>
     <br><br>
     If you have questions or comments about your privacy rights, you may email us at sales@foenixcoding.com.
+    <br><br>
+    <span class="responsive-text black">Account Information</span>
+    <br><br>
+    If you would at any time like to review or change the information in your account or terminate your account, you can:
+    <ul>
+      <li class="responsive-text">Contact us using the contact information provided.</li>
+    </ul>
+    <p class="responsive-text">
+    Upon your request to terminate your account, we will deactivate or delete your account and information from our active databases. However, some information may be retained in our files to prevent fraud, troubleshoot problems, assist with any investigations, enforce our Terms of Use and/or comply with legal requirements.
+    <br><br>
+    <span class="bold underline">Cookies and similar technologies:</span> Most Web browsers are set to accept cookies by default. If you prefer, you can usually choose to set your browser to remove cookies and to reject cookies. If you choose to remove cookies or reject cookies, this could affect certain features or services of our Services. To opt-out of interest-based advertising by advertisers on our Services visit <%= link_to 'http://www.aboutads.info/choices/.', 'http://www.aboutads.info/choices/.', target: '_blank' %>
+    <br><br>
+    <span class="bold underline">Opting out of email marketing:</span> You can unsubscribe from our marketing email list at any time by clicking on the unsubscribe link in the emails that we send or by contacting us using the details provided below. You will then be removed from the marketing email list – however, we will still need to send you service-related emails that are necessary for the administration and use of your account. To otherwise opt-out, you may:
+    <ul>
+      <li class="responsive-text">Contact us using the contact information provided.</li>
+    </ul>
     </p>
     <!-- 8 -->
-
+    <h4 class="bold mb-4">8. DATA BREACH</h4>
+    <p class="responsive-text">A privacy breach occurs when there is unauthorized access to or collection, use, disclosure or disposal of personal information. You will be notified about data breaches when Foenix Coding Ltd believes you are likely to be at risk or serious harm. For example, a data breach may be likely to result in serious financial harm or harm to your mental or physical well-being. In the event that Foenix Coding Ltd becomes aware of a security breach which has resulted or may result in unauthorized access, use or disclosure of personal information Foenix Coding Ltd will promptly investigate the matter and notify the applicable Supervisory Authority not later than 72 hours after having become aware of it, unless the personal data breach is unlikely to result in a risk to the rights and freedoms of natural persons.</p>
+    <!-- 9 -->
+    <h4 class="bold mb-4">9. CONTROLS FOR DO-NOT-TRACK FEATURES</h4>
+    <p class="responsive-text">Most web browsers and some mobile operating systems and mobile applications include a Do-Not-Track (“DNT”) feature or setting you can activate to signal your privacy preference not to have data about your online browsing activities monitored and collected. No uniform technology standard for recognizing and implementing DNT signals has been finalized. As such, we do not currently respond to DNT browser signals or any other mechanism that automatically communicates your choice not to be tracked online. If a standard for online tracking is adopted that we must follow in the future, we will inform you about that practice in a revised version of this privacy policy.</p>
+    <!-- 10 -->
+    <h4 class="bold mb-4">10. DO CALIFORNIA RESIDENTS HAVE SPECIFIC PRIVACY RIGHTS?</h4>
+    <p class="responsive-text"><span class="bold">In Short:</span> <span class="italic">Yes, if you are a resident of California, you are granted specific rights regarding access to your personal information.</span>
+    <br><br>
+    California Civil Code Section 1798.83, also known as the “Shine The Light” law, permits our users who are California residents to request and obtain from us, once a year and free of charge, information about categories of personal information (if any) we disclosed to third parties for direct marketing purposes and the names and addresses of all third parties with which we shared personal information in the immediately preceding calendar year. If you are a California resident and would like to make such a request, please submit your request in writing to us using the contact information provided below.
+    <br><br>
+    If you are under 18 years of age, reside in California, and have a registered account with the Services, you have the right to request removal of unwanted data that you publicly post on the Services. To request removal of such data, please contact us using the contact information provided below, and include the email address associated with your account and a statement that you reside in California. We will make sure the data is not publicly displayed on the Services, but please be aware that the data may not be completely or comprehensively removed from our systems.
+    </p>
+    <!-- 11 -->
+    <h4 class="bold mb-4">11. DO WE MAKE UPDATES TO THIS POLICY?</h4>
+    <p class="responsive-text"><span class="bold">In Short:</span> <span class="italic">Yes, we will update this policy as necessary to stay compliant with relevant laws.</span>
+    <br><br>
+    We may update this privacy policy from time to time. The updated version will be indicated by an updated “Revised” date and the updated version will be effective as soon as it is accessible. If we make material changes to this privacy policy, we may notify you either by prominently posting a notice of such changes or by directly sending you a notification. We encourage you to review this privacy policy frequently to be informed of how we are protecting your information.
+    </p>
+    <!-- 12 -->
+    <h4 class="bold mb-4">HOW CAN YOU CONTACT US ABOUT THIS POLICY?</h4>
+    <p class="responsive-text">If you have questions or comments about this policy, you may email us at sales@foenixcoding.com or by post to:
+    <br><br>
+    Foenix Coding Ltd<br>
+    Hilltop Farm – The Barns,<br>
+    Lyne lane, Lyne,<br>
+    Chertsey KT16 0AW<br>
+    United Kingdom
+    <br><br>
+    <h4 class="bold mb-4">HOW CAN YOU REVIEW, UPDATE, OR DELETE THE DATA WE COLLECT FROM YOU?</h4>
+    <p class="responsive-text">Based on the laws of some countries, you may have the right to request access to the personal information we collect from you, change that information, or delete it in some circumstances. To request to review, update, or delete your personal information, please submit a request form by clicking <%= link_to 'here', 'https://app.termly.io/notify/ebb37997-7936-46b3-b92b-e5b43a788900', target: '_blank' %>. We will respond to your request within 30 day</p>
   </div>
 </div>
+<%= render 'shared/newsletter' %>
