--- a/app/assets/stylesheets/pages/_landing.scss
+++ b/app/assets/stylesheets/pages/_landing.scss
@@ -52,7 +52,7 @@
   height: 1px;
   border-top: 3px solid #000;
   margin: 30px 0;
-  @include for-phone-only {
+  @include for-small-devices-down {
     margin: 30px auto;
   }
 }
