hide navbar and fixed background on sauven marking page

--- a/app/assets/stylesheets/pages/_landing.scss
+++ b/app/assets/stylesheets/pages/_landing.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   min-height: 100vh;
-  background: #EEF2F8;
+  background: linear-gradient(#EDF1F7, #F8F9FB);
 }
 
 .maintenance-container {
