added max width on images in first sections

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -8,7 +8,7 @@
       <h1 class="w-100"><%= t("about.second_section_title") %></h1>
       <p class="responsive-text about-second-section-text"><%= t("about.second_section_text") %></p>
     </div>
-    <%= cl_image_tag("about-graphic_avvw6d.png", :quality=>"auto", class: "first-section-image") %>
+    <%= cl_image_tag("about-graphic_avvw6d.png", :quality=>"auto", class: "first-section-image", style: "max-width: 800px;") %>
   </div>
   <div class="about-second-section-wrapper">
     <%= cl_image_tag("about-little-pill-sliced_z6varw.png", :quality=>"auto", class: "about-little-pill") %>
