--- a/app/views/pages/cost_of_ownership.html.erb
+++ b/app/views/pages/cost_of_ownership.html.erb
@@ -10,7 +10,7 @@
         <h1 class="responsive-header w-100"><%= t("cost_of_ownership.first_section_title") %> <span><%= cl_image_tag("fxone-logo_zjjdvc.png", class: "fxone-logo-right") %></span></h1>
         <p class="paragraph-text"><%= t("cost_of_ownership.first_section_text") %></p>
       </div>
-      <%= cl_image_tag("Piggy_1_al3kec.png", :quality=>"auto", class: "first-section-image") %>
+      <%= cl_image_tag("Piggy_1_al3kec.png", :quality=>"auto", class: "first-section-image", style: "max-width: 800px;") %>
   </div>
   <div class="ownership-second-section-wrapper">
     <div data-aos="fade-up" data-aos-duration="2000">
