--- a/app/views/pages/fxone_standard.html.erb
+++ b/app/views/pages/fxone_standard.html.erb
@@ -9,7 +9,7 @@
       <h1 class="w-100"><span><%= cl_image_tag("fxone-logo_zjjdvc.png", class: "fxone-logo") %></span> <%= t("fxone_standard.first_section_title") %></h1>
       <p class="paragraph-text inks-card-text"><%= t("fxone_standard.first_section_text") %></p>
     </div>
-    <%= cl_image_tag("fxone-standard-graphic-1_wieclv.png", :quality=>"auto", class: "first-section-image") %>
+    <%= cl_image_tag("fxone-standard-graphic-1_wieclv.png", :quality=>"auto", class: "first-section-image", style: "max-width: 800px;") %>
   </div>
   <div class="ownership-second-section-wrapper fxone-second-section-wrapper" style="padding-top: 15vh;">
     <%= image_tag 'square-dots.png', class: 'fxone-dots fxone-stand-dots hide-mobile' %>
