--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <% content_for :meta_title, "#{t('seo.home_page.title')}" %>
 <% content_for :meta_description, "#{t('seo.home_page.description')}" %>
 <div class="home">
-  <div class="first-section">
+  <div class="first-section" style="overflow-x: unset;">
     <%= cl_image_tag("Foenix-first-section-svg_ykndwi.png", :quality=>"auto", class: "first-section-svg") %>
     <div class="first-section-text">
       <!-- WEB TITLE -->
@@ -13,7 +13,7 @@
       <!-- MOBILE TITLE -->
       <p><%= t("home.title_description") %></p>
     </div>
-    <%= cl_image_tag("Foenix-machine_iqmh2t.png", class: "first-section-image") %>
+    <%= cl_image_tag("Foenix-machine_iqmh2t.png", class: "first-section-image", style: "max-width: 800px;") %>
   </div>
   <div class="second-section">
     <%= cl_image_tag("Foenix-first-section-svg_ykndwi.png", :quality=>"auto", class: "first-section-svg-2") %>
