--- a/app/views/pages/inks_and_consumables.html.erb
+++ b/app/views/pages/inks_and_consumables.html.erb
@@ -3,7 +3,7 @@
 <% content_for :meta_image, cl_image_path("inks-and-cons_wzglxn", width: 400) %>
 
 <div class="inks-wrapper">
-  <div class="first-section fxone-first-section-background">
+  <div class="first-section fxone-first-section-background" style="overflow-x: unset;">
     <%= cl_image_tag("inks_big_pill_dqob2a.png", :quality=>"auto", class: "inks-big-pill") %>
     <div class="first-section-text">
       <h1 class="w-100"><%= t("inks_and_consumables.first_section_text") %></h1>
