--- a/app/views/pages/software.html.erb
+++ b/app/views/pages/software.html.erb
@@ -17,7 +17,7 @@
       </div>
     </div>
     <%= cl_image_tag("software-graphic-1_elwb7o.png", class: "first-section-image show-mobile software-graphic-mobile") %>
-    <%= cl_image_tag("software-graphic-1_elwb7o.png", class: "first-section-image hide-mobile") %>
+    <%= cl_image_tag("software-graphic-1_elwb7o.png", class: "first-section-image hide-mobile", style: "max-width: 800px;") %>
   </div>
   <div class="software-second-section-wrapper" style="padding-top: 0px;">
     <div class="container">
