--- a/app/views/pages/fxone_remote.html.erb
+++ b/app/views/pages/fxone_remote.html.erb
@@ -6,7 +6,7 @@
   <%= cl_image_tag("inks_big_pill_dqob2a.png", :quality=>"auto", class: "fxone-big-pill") %>
   <%= cl_image_tag("inks_little_pill_pahv4x.png", :quality=>"auto", class: "fxone-little-pill") %>
   <div class="first-section fxone-first-section-background first-section-remote" style="padding-bottom: 0px;">
-    <%= cl_image_tag("fxone-remote-graphic-1_rq5ho4.png", class: "first-section-image remote-image") %>
+    <%= cl_image_tag("fxone-remote-graphic-1_rq5ho4.png", class: "first-section-image remote-image", style: "max-width: 800px;") %>
     <div class="first-section-text">
       <h1 class="w-100"><span><%= cl_image_tag("fxone-logo_zjjdvc.png", class: "fxone-logo") %></span> <%= t("fxone_remote.first_section_title") %></h1>
       <p class="paragraph-text"><%= t("fxone_remote.first_section_text") %></p>
