--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -774,6 +774,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 0 10vw 100px 10vw;
+  max-width: 1500px;
   // background-color: #F4F6F8;
 
   @include for-large-devices-down {
