--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -1,7 +1,6 @@
-<% if request.url == "http://foenixcoding.com" %>
+<% if request.url == "http://foenixcoding.com/" %>
   <%= render "shared/landing" %>
 <% else %>
   <%= render "shared/sauven" %>
 <% end %>
-<h1><%= request.url %></h1>
 
