--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -1,6 +1,8 @@
-<% if request.url == "http://foenixcoding.com/" %>
-  <%= render "shared/landing" %>
-<% else %>
+<% if request.url == "http://sauven-marking.com/" %>
   <%= render "shared/sauven" %>
+<% else %>
+  <%= render "shared/landing" %>
 <% end %>
+<h3 style="opacity: 0;"><%= request.url %></h3>
+<h3 style="opacity: 0;"><%= request.url == "http://sauven-marking.com/" %></h3>
 
