--- a/app/views/shared/_sauven.html.erb
+++ b/app/views/shared/_sauven.html.erb
@@ -59,5 +59,7 @@
       </div>
     </div>
   </div>
+  <h3 style="opacity: 0;"><%= request.url %></h3>
+  <h3 style="opacity: 0;"><%= request.url == "http://sauven-marking.com/" %></h3>
 </div>
 
