--- a/app/views/shared/_landing.html.erb
+++ b/app/views/shared/_landing.html.erb
@@ -15,4 +15,6 @@
       <%= image_tag 'foenix-logo.png', class: 'foenix-logo' %>
     </div>
   </div>
+  <h3 style="opacity: 0;"><%= request.url %></h3>
+<h3 style="opacity: 0;"><%= request.url == "http://sauven-marking.com/" %></h3>
 </div>
