--- a/app/views/shared/_sauven.html.erb
+++ b/app/views/shared/_sauven.html.erb
@@ -60,6 +60,7 @@
     </div>
   </div>
   <h3 style="opacity: 0;"><%= request.url %></h3>
+  <h3 style="opacity: 0;"><%= request.referrer %></h3>
   <h3 style="opacity: 0;"><%= request.url == "http://sauven-marking.com/" %></h3>
 </div>
 
