--- a/app/views/pages/sauven_marking.html.erb
+++ b/app/views/pages/sauven_marking.html.erb
@@ -13,23 +13,23 @@
       <p class="landing-text">We provide a full range of spare parts for both inkjet printers and contact coders.</p>
       <p class="landing-text">We can help you with the following products:​​​​</p>
       <div class="sauven-product-list-container text-left">
-        <div class="suaven-product-list">
+        <div class="sauven-product-list">
           <p class="bold mb-1" style="color: #17375D">Sauven Printers</p>
           <ul style="padding-left: 16px;">
-            <li>Suaven 500</li>
-            <li>Suaven 600</li>
-            <li>Suaven 700</li>
-            <li>Suaven 6000 Plus</li>
-            <li>Suaven 6000 Standard</li>
-            <li>Suaven Duo</li>
-            <li>Suaven Trio</li>
-            <li>Suaven Quattro</li>
-            <li>Suaven 1000</li>
-            <li>Suaven 6000</li>
-            <li>Suaven 5000</li>
+            <li>Sauven 500</li>
+            <li>Sauven 600</li>
+            <li>Sauven 700</li>
+            <li>Sauven 6000 Plus</li>
+            <li>Sauven 6000 Standard</li>
+            <li>Sauven Duo</li>
+            <li>Sauven Trio</li>
+            <li>Sauven Quattro</li>
+            <li>Sauven 1000</li>
+            <li>Sauven 6000</li>
+            <li>Sauven 5000</li>
           </ul>
         </div>
-        <div class="suaven-product-list ml-3 mb-3">
+        <div class="sauven-product-list ml-3 mb-3">
           <p class="bold mb-1" style="color: #17375D">Sauven Consumables</p>
           <ul style="padding-left: 16px;">
             <li>CJ6001 - Oil-ink cartridges - Black</li>
