--- a/app/assets/stylesheets/pages/_sauven_marking.scss
+++ b/app/assets/stylesheets/pages/_sauven_marking.scss
@@ -12,7 +12,7 @@
   }
 }
 
-.suaven-product-list {
+.sauven-product-list {
   @include for-small-devices-down {
     margin: 0 20px 0 0 !important;
   }
