--- a/app/assets/stylesheets/posts/_posts-index.scss
+++ b/app/assets/stylesheets/posts/_posts-index.scss
@@ -189,8 +189,10 @@
 }
 
 .new-post-card-image {
-  height: 150px;
-  width: 150px;
+  min-height: 150px !important;
+  min-width: 150px !important;
+  height: 150px !important;
+  width: 150px !important;
   object-fit: cover;
   border-radius: 10px;
   margin-left: 20px;
