small home page fixes

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -210,6 +210,10 @@
           </div>
         </div>
       </div>
+      <div class="third-video-text">
+        <h3><span><%= image_tag "fxone_orange.png", alt: "Fxone Printer", class: "fxone_orange_small" %></span> Printer</h3>
+        <p>Helping businesses improve efficiency and lower production costs</p>
+      </div>
       <div class="third-section-video">
         <%= cl_image_tag("home-outline-pill-1_o8d5ve.png", class: "home-outline-pill-1") %>
         <%= cl_image_tag("home-outline-pill-2_yk18fu.png", class: "home-outline-pill-2") %>
@@ -231,10 +235,6 @@
               <p><%= t('home.fxone_subtext') %></p>
             </div>
           </div>
-        </div>
-        <div class="third-video-text">
-          <h3><span>FX ONE</span> Printer</h3>
-          <p>Helping businesses improve efficiency and lower production costs</p>
         </div>
       </div>
     </div>
