--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -468,6 +468,8 @@
   @include for-medium-devices-down {
     justify-content: center;
     padding: 0;
+    margin-top: 0;
+
   }
 
   @include for-small-devices-down {
@@ -1029,6 +1031,12 @@
 
 .fxone_orange {
   height: 45px;
+}
+
+.fxone_orange_small {
+  height: 28px;
+  padding-bottom: 5px;
+  padding-right: 3px;
 }
 
 .tabs-pill {
